2008-06-07  Filippo Argiolas <filippo dot argiolas at gmail dot com>
	* gst-libs/gst/gl/gstglshader.c:
	* gst-libs/gst/gl/gstglshader.h:
	* gst-libs/gst/gl/gstglprogram.h:
	Merged first work for Google Summer of Code 2008.
	Iinitial draft for a couple of GObject classes to manage GLSL Program
	and Shader Objects. It's far from complete but usable yet, still need
	some data structure to track which shader are attached with which
	programs, uniform variables support etc
	* gst-libs/gst/gl/glextensions.c:
	* gst-libs/gst/gl/glextensions.h:
	Added support for a couple of gl functions needed to manage shaders
	* gst-libs/gst/gl/Makefile.am: Build new classes

2008-04-06  Sebastian Dröge  <slomo@circular-chaos.org>

        Patch by: Damien Lespiau <damien dot lespiau at gmail dot com>

        * configure.ac:
        Actually build dlls when cross-compiling with mingw32.
        Fixes bug #526247.

2008-03-24  David Schleef  <ds@schleef.org>

	* Makefile.am:
	* configure.ac: Fix build system for recent changes in m4
	  files.  Fixed problem building gst/gl/

2008-02-23  Tim-Philipp Müller  <tim at centricular dot net>

	* gst-libs/gst/gl/gstglbuffer.c:
	  (gst_gl_buffer_format_from_video_format):
	  Fix compiler warning if there are video format
	  enums gstglbuffer doesn't know about yet.

	* gst-libs/gst/gl/gstgldisplay.c:
	  (gst_gl_display_upload_texture_rectangle),
	  (gst_gl_display_draw_texture):
	  Fix printf format for 64-bit integers.

2008-01-31  David Schleef  <ds@schleef.org>

	* configure.ac:
	* pkgconfig/Makefile.am:
	* pkgconfig/gstreamer-gl-uninstalled.pc.in:
	* pkgconfig/gstreamer-gl.pc.in:
	* pkgconfig/gstreamer-plugins-gl-uninstalled.pc.in:
	* pkgconfig/gstreamer-plugins-gl.pc.in:
	  Rename pkgconfig files.  And install them.
	* tests/check/Makefile.am:
	* tests/check/generic/states.c:
	* tests/check/pipelines/simple-launch-lines.c:
	  Add some tests copied from -good.

2008-01-31  Tim-Philipp Müller  <tim at centricular dot net>
