@@ -11,6 +11,7 @@ void glShaderSourceARB (GLhandleARB shaderObj, GLsizei count, const GLcharARB **
 void glUniform2fARB (GLint location, GLfloat val1, GLfloat val2);
 GLint glGetUniformLocationARB (GLhandleARB programObj, const GLcharARB *name);
 void glUniform1iARB (GLint location, GLint val);
+void glUniform1fARB (GLint location, GLfloat val);
 void glCompileShaderARB (GLhandleARB shader);
 void glGetObjectParameterivARB (GLhandleARB object, GLenum pname, GLint *params);
 void glGetInfoLogARB (GLhandleARB object, GLsizei maxLength, GLsizei *length,
